# dam-2023

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: requirements.txt
api/src/: app.py  config.py  schemas.py
api/src/routes/: v1.py
api/src/utils/: logger.py  model.py
notebooks/: housing.ipynb  load_model.ipynb
