[tool.poetry]
name = "dam"
version = "0.1.0"
description = "DAM 2023 workshop"
authors = ["Kacper Kedzierski <kacperkedzierski@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.2"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
plotly = "^5.15.0"
fastapi = {extras = ["all"], version = "^0.97.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
